app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: app-deploy
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
